# togo-husky-sim

./: .dockerignore  .gitignore  Dockerfile.lidarslam  Dockerfile.sim  NAVIGATION_README.md  README.md  SLAM_README.md  docker-compose.lidarslam.yml  docker-compose.sim.yml  odom_to_imu.py  robot.srdf  robot.srdf.xacro  robot.urdf.xacro  robot.yaml  source_togo_custom.sh  start_seyond_support.sh  start_slam_support.sh  wasd_teleop.py
.claude/: settings.local.json
custom_ws/src/togo_custom/togo_bringup/: CMakeLists.txt  package.xml
custom_ws/src/togo_custom/togo_bringup/config/: imu_bridge.yaml  seyond_bridge.yaml
custom_ws/src/togo_custom/togo_bringup/launch/: togo_bringup.launch.py
custom_ws/src/togo_custom/togo_description/: CMakeLists.txt  package.xml
custom_ws/src/togo_custom/togo_description/urdf/: togo_description.urdf.xacro
docker/: lidarslam_entrypoint.sh
gazebo_tests/: README.md  camera_render_test.sdf  seyond_robin_w_gpu_lidar.sdf
lidarslam_ros2/: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DLIO_GRAPH_SLAM_SETUP.md  README.md  RELEASING.md  VENDORED_UPSTREAM.md  mkdocs.yml  plan.md
lidarslam_ros2/graph_based_slam/: CMakeLists.txt  package.xml
lidarslam_ros2/graph_based_slam/include/graph_based_slam/: adjacent_edge_auto_scale.hpp  bev_mutual_visibility.hpp  dynamic_object_filter.hpp  gnss_weighting.hpp  graph_based_slam_component.h  loop_edge_robustifier.hpp  scan_context.hpp  solid_descriptor.hpp  submap_bev_descriptor.hpp  three_d_bbs_loop_verifier.hpp  triangle_descriptor.hpp  triangle_descriptor_database.hpp
lidarslam_ros2/graph_based_slam/launch/: graphbasedslam.launch.py
lidarslam_ros2/graph_based_slam/param/: graphbasedslam.yaml  graphbasedslam_indoor.yaml
lidarslam_ros2/graph_based_slam/src/: graph_based_slam_component.cpp  graph_based_slam_node.cpp  three_d_bbs_loop_verifier.cpp
lidarslam_ros2/graph_based_slam/test/: test_adjacent_edge_auto_scale.cpp  test_aligned_trajectory_metrics.py  test_applanix_gsof49_reference_extractor.py  test_applanix_gsof50_inspector.py  test_applanix_imu_bridge.py  test_applanix_navsatfix_bridge.py  test_applanix_tf_bridge.py  test_autoware_map_preflight.py  test_autoware_map_run_diagnosis.py  test_autoware_map_tools.py  test_benchmark_reporting_tools.py  test_bev_mutual_visibility.cpp  test_classic_path_report.py  test_deterministic_loop_scheduling_defaults.py  test_docs_entrypoints.py  test_dynamic_object_filter.cpp  test_dynamic_object_filter_report.py  test_dynamic_object_filter_validation_report.py  test_exploration_closeout_report.py  test_gaussian_splatting_extract.py  test_gaussian_splatting_pointcloud.py  test_gaussian_splatting_posed_images.py  test_gaussian_splatting_train.py  test_gnss_weighting.cpp  test_jetson_mid360_host_readiness.py  test_loop_edge_robustifier.cpp  test_map_authoring_report.py  test_mid360_robot_3d_map_preview.py  test_mid360_robot_bag_stamp_rewriter.py  test_mid360_robot_dashboard.py  test_mid360_robot_field_session.py  test_mid360_robot_loop_alignment_analyzer.py  test_mid360_robot_map_runner.py  test_mid360_robot_plan_cli.py  test_mid360_robot_preflight.py  test_mid360_robot_production_candidate_bundle.py  test_mid360_robot_production_candidate_bundle_import.py  test_mid360_robot_production_candidate_session.py  test_mid360_robot_production_readiness.py  test_mid360_robot_profile_cli.py  (+45 more)
lidarslam_ros2/lidarslam/: CMakeLists.txt  package.xml
lidarslam_ros2/lidarslam/launch/: lidarslam.launch.py  lidarslam_tukuba.launch.py  lo_slam.launch.py  rko_lio_slam.launch.py  seyond_dlio_slam.launch.py  seyond_faster_lio_slam.launch.py  seyond_live_slam.launch.py  seyond_small_vgicp_slam.launch.py  small_gicp_lo_slam.launch.py
lidarslam_ros2/lidarslam/param/: lidarslam.yaml  lidarslam_kitti_velodyne.yaml  lidarslam_lo.yaml  lidarslam_mid360_imu.yaml  lidarslam_mid360_noimu.yaml  lidarslam_mid360_rko_graph.yaml  lidarslam_mid360_rko_graph_3dbbs.yaml  lidarslam_mid360_rko_graph_strong_loop.yaml  lidarslam_mid360_rko_graph_triangle_on.yaml  lidarslam_mid360_rko_graph_v2_sweet.yaml  rko_lio_kitti_odometry.yaml  rko_lio_mid360.yaml  rko_lio_ntu_viral.yaml  seyond_dlio_graph.yaml  seyond_live_slam.yaml  seyond_small_vgicp_slam.yaml  small_gicp_kitti_velodyne.yaml
lidarslam_ros2/lidarslam/rviz/: mapping.rviz
lidarslam_ros2/lidarslam/src/: lidarslam.cpp
lidarslam_ros2/lidarslam/test/: test_aggregate_kitti_metrics.py  test_autoware_map_runner_script.py  test_benchmark_summary_profiles.py  test_dynamic_object_filter_benchmark_script.py  test_kitti_metrics.py  test_lidarslam_launch_config.py  test_lo_slam_launch_config.py  test_open_data_applanix_velodyne_gnss_benchmark_script.py  test_open_data_applanix_velodyne_gnss_smoke_script.py  test_open_data_classic_path_benchmark_suite_script.py  test_open_data_gnss_smoke_script.py  test_open_data_packet_imu_deskew_validation_matrix_script.py  test_place_recognition_benchmark_script.py  test_rko_lio_launch_config.py  test_rko_lio_mid360_crossval_benchmark_script.py  test_simple_lanelet2_generator.py  test_small_gicp_lo_slam_launch_config.py
lidarslam_ros2/lidarslam_msgs/: package.xml
lidarslam_ros2/scanmatcher/: CMakeLists.txt  package.xml
lidarslam_ros2/scanmatcher/include/scanmatcher/: lidar_undistortion.hpp  odom_prior_utils.hpp  scanmatcher_component.h  voxel_hash_map.hpp
lidarslam_ros2/scanmatcher/src/: scanmatcher_component.cpp  small_gicp_odom_node.cpp
lidarslam_ros2/scanmatcher/test/: test_lidar_undistortion.cpp  test_math_utils.cpp  test_odom_prior_utils.cpp
lidarslam_ros2/togo_navigation/: CMakeLists.txt  package.xml
lidarslam_ros2/togo_navigation/config/: nav2_slam_params.yaml
lidarslam_ros2/togo_navigation/launch/: rover_nav2.launch.py
lidarslam_ros2/togo_navigation/rviz/: rover_nav_debug.rviz
lidarslam_ros2/togo_navigation/scripts/: debug_map_publisher.py
lidarslam_ros2/togo_navigation/src/: local_hazard_grid.cpp  occupancy_grid_to_points.cpp  odometry_to_tf.cpp  seyond_cloud_time_adapter.cpp  slam_to_occupancy_grid.cpp
lunar_enhanced_nac_01/: enhanced_lunar.world.sdf
(+329 files in other folders)
