<?xml version="1.0"?>
<package format="3">
  <name>lidarslam_msgs</name>
  <version>0.2.2</version>
  <description>lidarslam_ros2 msgs</description>
  <maintainer email="rsasaki0109@gmail.com">sasaki</maintainer>
  <license>BSD2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
