<?xml version="1.0"?>
<package format="3">
  <name>togo_bringup</name>
  <version>0.0.1</version>
  <description>TOGO Clearpath simulation bringup customizations.</description>
  <maintainer email="nargon@example.com">nargon</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>
