<?xml version="1.0"?>
<package format="3">
  <name>togo_description</name>
  <version>0.0.1</version>
  <description>TOGO Clearpath simulation description customizations.</description>
  <maintainer email="nargon@example.com">nargon</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
</package>
